--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=student;user=student;password=123;trustServerCertificate=true;
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.h2.console.enabled=false
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+spring.batch.jdbc.initialize-schema=always
+spring.batch.job.enabled=false
 
