to show error message in post response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.show-sql=true
 spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
 
+server.error.include-message=always
+
